<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rkdhatt_notes.EditClaimActivity" >

    <TextView
        android:id="@+id/editClaimTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_claim_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editClaimListView"
        android:layout_alignStart="@+id/editClaimListView"
        android:layout_alignEnd="@+id/editClaimListView" >

        <TextView
            android:id="@+id/firstColumnLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="200"
            android:text="@string/name_column_str" />

        <TextView
            android:id="@+id/secondColumnLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="200"
            android:text="@string/status_column_str" />

        <TextView
            android:id="@+id/thirdColumnLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="200"
            android:text="@string/curr_column_str" />
    </LinearLayout>

    <ListView
        android:id="@+id/editClaimListView"
        android:numColumns="2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" >
    </ListView>

</RelativeLayout>
