<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/expenseDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenseNameText"
        android:ems="10"
        android:hint="Date"
        android:inputType="date" />

    <TextView
        android:id="@+id/addExpenseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ex_add_title_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/expenseNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addExpenseTitle"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="Name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/currTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/catTextView"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/expenseInfoText"
        android:text="@string/ex_curr_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/cat_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/expenseDateText"
        android:drawSelectorOnTop="true"
        android:entries="@array/category_array" />

    <TextView
        android:id="@+id/catTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/cat_spinner"
        android:layout_marginStart="17dp"
        android:layout_toStartOf="@+id/cat_spinner"
        android:text="@string/ex_cat_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/expenseInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cat_spinner"
        android:ems="10"
        android:hint="Description"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/curr_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/currTextView"
        android:drawSelectorOnTop="true"
        android:entries="@array/currency_array" />

    <EditText
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/currTextView"
        android:layout_toLeftOf="@+id/curr_spinner"
        android:ems="6"
        android:hint="Price"
        android:inputType="numberDecimal" />

</RelativeLayout>
