<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
        <EditText
            android:id="@+id/expenseDateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/expenseNameEdit"
            android:ems="10"
            android:hint="New Date"
            android:inputType="date" />

    <TextView
        android:id="@+id/editExpenseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ex_edit_title_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/expenseNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editExpenseTitle"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="New Name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/currTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/catTextEdit"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/expenseInfoEdit"
        android:text="@string/ex_curr_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/cat_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/expenseDateEdit"
        android:drawSelectorOnTop="true"
        android:entries="@array/category_array" />

    <TextView
        android:id="@+id/catTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/cat_spinner"
        android:layout_marginStart="17dp"
        android:layout_toStartOf="@+id/cat_spinner"
        android:text="@string/ex_cat_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/expenseInfoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cat_spinner"
        android:ems="10"
        android:hint="New Description"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/curr_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/currTextEdit"
        android:drawSelectorOnTop="true"
        android:entries="@array/currency_array" />

    <EditText
        android:id="@+id/amountEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/currTextEdit"
        android:layout_toLeftOf="@+id/curr_spinner"
        android:ems="6"
        android:hint="New Price"
        android:inputType="numberDecimal" />

</RelativeLayout>
